# phd

./: .gitignore  Untitled-Copy1.ipynb  Untitled.ipynb  benchmark.md  bert_report_2.txt  bert_results.txt  emoji-13-full-list.txt  emojicount.txt  emojis.txt  example.json  extract.py  filter.py  filterbylang.py  filterbytopic.py  keywords  nrc_report.txt  out.json  predict.py  predict_sent.py  query_relations.json  sent_imdb.py  sent_vader.py  simplifier.py  text2emotion_results.txt  todo.org  training.py  training_emo_bert.py
2_data_preparation/: 1_ingester.py  2_simplifier.py  3_filterbytopic.py  4_filterbylang.py  5_to_csv.py
3_model_training/: runner.py
4_analysis/: 1_merger.py  2_bigrams.py  3_keyword-based-ner.py  4_get_aspects_datasets.py  analysis_script.py  filterbytopic_c.py  keyword-based-ner.py  pos_tagger.py  wordcountplots.py
LDA_stuff/: lda.py  mainAnalysisLDA.py
bert_attempt/: multi_class.py  training.py
data/: ES_val_dataset.csv  East_Asia-China-Hong_Kong.csv  climate_sent.json.csv  hk_events.csv  hk_sent.json.csv  merge_emo_data.csv  merge_emo_data_ES.csv  xr_events.csv  xr_events_only.csv
dictionary_based/: testing_text2emotion.py
digester/: expall.sh  ingester.py  process.sh
hf_models/: bert_ner.py  distilBERT_prediction_test.py  testing_emo_bert.py  training_emo_DB.py  training_emo_DB_ES.py  training_emo_bert.py  training_fr_db.py
hf_utils/: predictor.py  runner.py  trainer.py
keywordsbytopic/: climate_keywords.txt  iraq_keywords.txt  (+1 more)
old_files/emoji_extraction/: Cargo.toml
old_files/emoji_extraction/src/: main.rs
(+52 files in other folders)
