[package]
name = "emoji_extraction"
version = "0.1.0"
authors = ["Daniel Valdenegro <dhvalden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"